--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ font-family: 'Poppins', sans-serif;
 7.  Experience
 8.  Profiles
 9.  Portfolio
-10. Clients
+10. Expertise
 11. Contact
 
 /*-------------------------------------
@@ -271,7 +271,11 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
 /*.single-about-txt*/
 
 /*.single-about-img */
-.single-about-img{position: relative;box-shadow: 0 5px 20px rgba(14,25,80,.30);}
+.single-about-img{
+    position: relative;
+    box-shadow: 0 5px 20px rgba(14,25,80,.30);
+}
+
 .single-about-img:before {
     position:  absolute;
     content: " ";
@@ -666,17 +670,17 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }/*.isotope-overlay*/
 
 /*-------------------------------------
-        10. Clients
+        10. Expertise
 --------------------------------------*/
-.clients {padding-top: 50px;}
-.clients-area {
+.Expertise {padding-top: 50px;}
+.Expertise-area {
     display: flex;
     align-items: center;
     height: 250px;
 }
-.clients-area .item {padding: 0 25px;}
+.Expertise-area .item {padding: 0 25px;}
 
-.clients .clients-area .owl-carousel .owl-item img {
+.Expertise .Expertise-area .owl-carousel .owl-item img {
     display: block;
     width: 100%;
     height: auto;
@@ -849,9 +853,61 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     100%  {bottom:7px;}
 }
 
-.fa{
+.fa-icons{
     font-size: 8rem;
     color: #9b5fa6;
 }
 
+.fa-profile{
+    font-size: 4rem;
+    margin: 10px 0;
+}
+
+.about-right{
+    display: flex;
+    background-color: #1f2c6c;
+    justify-content:space-evenly;
+}
+
+.about-right .about-image img{
+   height: 470px;
+   width: 284px;
+}
+
+
+.about-icons{
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-icons>a>i{
+    font-size: 34px;
+    color: azure;
+}
+
+
+@media (max-width: 700px)  {
+    .about-right{
+        justify-content:space-between;
+        flex-direction:row;
+        background-color: white;
+    }
+
+    .about-icons>a>i{
+        font-size: 34px;
+        color: black;
+    }
+
+}
+
+
+
+
+
+
 /*========================Thank you=================
+
+
